over ride clerk next depe in package json

--- a/package.json
+++ b/package.json
@@ -42,5 +42,10 @@
     "postcss": "^8",
     "tailwindcss": "^4.1.7",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@clerk/nextjs": {
+      "next": "15.1.8"
+    }
   }
 }
